unauthenticated ga4gh endpoint for public WDL
