# src/main/scala/org/broadinstitute/dsde/agora/server/webservice/handlers/QueryHandler.scala
@@ -3,7 +3,9 @@ package org.broadinstitute.dsde.agora.server.webservice.handlers
 import akka.actor.Actor
 import akka.pattern._
 import org.broadinstitute.dsde.agora.server.business.{AgoraBusiness, PermissionBusiness}
-import org.broadinstitute.dsde.agora.server.dataaccess.permissions.PermissionsDataSource
+import org.broadinstitute.dsde.agora.server.dataaccess.permissions.{AccessControl, PermissionsDataSource}
+import org.broadinstitute.dsde.agora.server.exceptions.ValidationException
+import org.broadinstitute.dsde.agora.server.ga4gh.Models._
 import org.broadinstitute.dsde.agora.server.model.AgoraApiJsonSupport._
 import org.broadinstitute.dsde.agora.server.model.{AgoraEntity, AgoraEntityProjection, AgoraEntityType, MethodDefinition}
 import org.broadinstitute.dsde.agora.server.webservice.PerRequest._
@@ -33,6 +35,10 @@ class QueryHandler(dataSource: PermissionsDataSource, implicit val ec: Execution
                      onlyPayload: Boolean,
                      payloadAsObject: Boolean) =>
       query(requestContext, entity, entityTypes, username, onlyPayload, payloadAsObject) pipeTo context.parent
+
+    case QueryPublicSingle(requestContext: RequestContext, entity: AgoraEntity, descriptorType: ToolDescriptorType.DescriptorType) =>
+      queryPublic(requestContext, entity, descriptorType) pipeTo context.parent
+
 
     case Query(requestContext: RequestContext,
                agoraSearch: AgoraEntity,
@@ -81,6 +87,22 @@ class QueryHandler(dataSource: PermissionsDataSource, implicit val ec: Execution
         case _ => RequestComplete(foundEntity)
       }
 
+    }
+  }
+
+  def queryPublic(requestContext: RequestContext, entity: AgoraEntity, descriptorType: ToolDescriptorType.DescriptorType): Future[PerRequestMessage] = {
+    val entityTypes = Seq(entity.entityType.getOrElse(throw new ValidationException("need an entity type")))
+    agoraBusiness.findSingle(entity, entityTypes, AccessControl.publicUser) map { foundEntity =>
+
+      descriptorType match {
+        case ToolDescriptorType.WDL =>
+          val result = ToolDescriptor(foundEntity.url.getOrElse(""),
+            foundEntity.payload.getOrElse(""),
+            ToolDescriptorType.WDL)
+          RequestComplete(result)
+        case ToolDescriptorType.PLAIN_WDL =>
+          RequestComplete(foundEntity.payload.getOrElse(""))
+      }
     }
   }
 
